Yourkoza2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    DECREASE
    FALSE
    INCREASE
    INTEGER
    JOIN
    LETTER
    OR
    RISK
    SAVE
    TRUE

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     program -> expression
Rule 3     statements -> statements statement
Rule 4     statements -> statement
Rule 5     statement -> assignment
Rule 6     statement -> conditional
Rule 7     statement -> loop
Rule 8     statement -> function
Rule 9     statement -> display
Rule 10    statement -> input
Rule 11    assignment -> LET IDENTIFIER EQUAL expression
Rule 12    comment -> COMMENT
Rule 13    conditional -> IF condition THEN statements else_statements_opt END
Rule 14    else_statements_opt -> ELSE statements
Rule 15    else_statements_opt -> empty
Rule 16    condition -> expression IS_LESS_THAN expression
Rule 17    condition -> expression IS_EQUAL_TO expression
Rule 18    condition -> expression IS_GREATER_THAN expression
Rule 19    condition -> expression IS_NOT_EQUAL_TO expression
Rule 20    condition -> expression GREATER_THAN_OR_EQUAL_TO expression
Rule 21    condition -> expression LESS_THAN_OR_EQUAL_TO expression
Rule 22    expression -> expression PLUS term
Rule 23    expression -> expression MINUS term
Rule 24    expression -> term
Rule 25    expression -> expression POWER term
Rule 26    expression -> NOT expression
Rule 27    expression -> LPAREN expression RPAREN
Rule 28    expression -> NUMBER MINUS term
Rule 29    expression -> REAL MINUS term
Rule 30    expression -> CHARACTER PLUS term
Rule 31    expression -> list
Rule 32    term -> term TIMES factor
Rule 33    term -> term DIVIDE factor
Rule 34    term -> IDENTIFIER
Rule 35    term -> factor
Rule 36    factor -> NUMBER
Rule 37    factor -> LPAREN expression RPAREN
Rule 38    factor -> REAL
Rule 39    input -> LET IDENTIFIER EQUAL SHOW IDENTIFIER LPAREN STRING_LITERAL RPAREN
Rule 40    display -> SHOW expression
Rule 41    display -> SHOW STRING_LITERAL
Rule 42    display -> SHOW IDENTIFIER
Rule 43    display -> SHOW NUMBER
Rule 44    display -> SHOW REAL
Rule 45    display -> SHOW CHARACTER
Rule 46    display -> SHOW list
Rule 47    display -> SHOW function
Rule 48    display -> SHOW conditional
Rule 49    display -> SHOW loop
Rule 50    display -> SHOW input
Rule 51    display -> SHOW comment
Rule 52    display -> SHOW program
Rule 53    display -> SHOW statements
Rule 54    display -> SHOW expression_list
Rule 55    display -> SHOW assignment
Rule 56    display -> SHOW display
Rule 57    loop -> FOR IDENTIFIER IN list DO statements
Rule 58    loop -> WHILE condition DO statements
Rule 59    loop -> DO statements WHILE condition
Rule 60    list -> LBRACKET expression_list RBRACKET
Rule 61    list -> empty
Rule 62    expression_list -> expression
Rule 63    expression_list -> expression_list COMMA expression
Rule 64    expression_list -> empty
Rule 65    function -> FUNCTION IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE return_statement_opt RBRACE
Rule 66    parameters -> IDENTIFIER
Rule 67    parameters -> parameters COMMA IDENTIFIER
Rule 68    parameters -> empty
Rule 69    return_statement_opt -> RETURN expression
Rule 70    return_statement_opt -> empty
Rule 71    empty -> <empty>

Terminals, with rules where they appear

AND                  : 
CHARACTER            : 30 45
COMMA                : 63 67
COMMENT              : 12
DECREASE             : 
DIVIDE               : 33
DO                   : 57 58 59
ELSE                 : 14
END                  : 13
EQUAL                : 11 39
FALSE                : 
FOR                  : 57
FUNCTION             : 65
GREATER_THAN_OR_EQUAL_TO : 20
IDENTIFIER           : 11 34 39 39 42 57 65 66 67
IF                   : 13
IN                   : 57
INCREASE             : 
INTEGER              : 
IS_EQUAL_TO          : 17
IS_GREATER_THAN      : 18
IS_LESS_THAN         : 16
IS_NOT_EQUAL_TO      : 19
JOIN                 : 
LBRACE               : 65
LBRACKET             : 60
LESS_THAN_OR_EQUAL_TO : 21
LET                  : 11 39
LETTER               : 
LPAREN               : 27 37 39 65
MINUS                : 23 28 29
NOT                  : 26
NUMBER               : 28 36 43
OR                   : 
PLUS                 : 22 30
POWER                : 25
RBRACE               : 65 65
RBRACKET             : 60
REAL                 : 29 38 44
RETURN               : 69
RISK                 : 
RPAREN               : 27 37 39 65
SAVE                 : 
SHOW                 : 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
STRING_LITERAL       : 39 41
THEN                 : 13
TIMES                : 32
TRUE                 : 
WHILE                : 58 59
error                : 

Nonterminals, with rules where they appear

assignment           : 5 55
comment              : 51
condition            : 13 58 59
conditional          : 6 48
display              : 9 56
else_statements_opt  : 13
empty                : 15 61 64 68 70
expression           : 2 11 16 16 17 17 18 18 19 19 20 20 21 21 22 23 25 26 27 37 40 62 63 69
expression_list      : 54 60 63
factor               : 32 33 35
function             : 8 47
input                : 10 50
list                 : 31 46 57
loop                 : 7 49
parameters           : 65 67
program              : 52 0
return_statement_opt : 65
statement            : 3 4
statements           : 1 3 13 14 53 57 58 59 65
term                 : 22 23 24 25 28 29 30 32 33

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) program -> . expression
    (3) statements -> . statements statement
    (4) statements -> . statement
    (22) expression -> . expression PLUS term
    (23) expression -> . expression MINUS term
    (24) expression -> . term
    (25) expression -> . expression POWER term
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER MINUS term
    (29) expression -> . REAL MINUS term
    (30) expression -> . CHARACTER PLUS term
    (31) expression -> . list
    (5) statement -> . assignment
    (6) statement -> . conditional
    (7) statement -> . loop
    (8) statement -> . function
    (9) statement -> . display
    (10) statement -> . input
    (32) term -> . term TIMES factor
    (33) term -> . term DIVIDE factor
    (34) term -> . IDENTIFIER
    (35) term -> . factor
    (60) list -> . LBRACKET expression_list RBRACKET
    (61) list -> . empty
    (11) assignment -> . LET IDENTIFIER EQUAL expression
    (13) conditional -> . IF condition THEN statements else_statements_opt END
    (57) loop -> . FOR IDENTIFIER IN list DO statements
    (58) loop -> . WHILE condition DO statements
    (59) loop -> . DO statements WHILE condition
    (65) function -> . FUNCTION IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE return_statement_opt RBRACE
    (40) display -> . SHOW expression
    (41) display -> . SHOW STRING_LITERAL
    (42) display -> . SHOW IDENTIFIER
    (43) display -> . SHOW NUMBER
    (44) display -> . SHOW REAL
    (45) display -> . SHOW CHARACTER
    (46) display -> . SHOW list
    (47) display -> . SHOW function
    (48) display -> . SHOW conditional
    (49) display -> . SHOW loop
    (50) display -> . SHOW input
    (51) display -> . SHOW comment
    (52) display -> . SHOW program
    (53) display -> . SHOW statements
    (54) display -> . SHOW expression_list
    (55) display -> . SHOW assignment
    (56) display -> . SHOW display
    (39) input -> . LET IDENTIFIER EQUAL SHOW IDENTIFIER LPAREN STRING_LITERAL RPAREN
    (36) factor -> . NUMBER
    (37) factor -> . LPAREN expression RPAREN
    (38) factor -> . REAL
    (71) empty -> .

    NOT             shift and go to state 6
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 8
    REAL            shift and go to state 9
    CHARACTER       shift and go to state 10
    IDENTIFIER      shift and go to state 19
    LBRACKET        shift and go to state 20
    LET             shift and go to state 22
    IF              shift and go to state 23
    FOR             shift and go to state 24
    WHILE           shift and go to state 26
    DO              shift and go to state 25
    FUNCTION        shift and go to state 27
    SHOW            shift and go to state 28
    PLUS            reduce using rule 71 (empty -> .)
    MINUS           reduce using rule 71 (empty -> .)
    POWER           reduce using rule 71 (empty -> .)
    $end            reduce using rule 71 (empty -> .)

    program                        shift and go to state 1
    statements                     shift and go to state 2
    expression                     shift and go to state 3
    statement                      shift and go to state 4
    term                           shift and go to state 5
    list                           shift and go to state 11
    assignment                     shift and go to state 12
    conditional                    shift and go to state 13
    loop                           shift and go to state 14
    function                       shift and go to state 15
    display                        shift and go to state 16
    input                          shift and go to state 17
    factor                         shift and go to state 18
    empty                          shift and go to state 21

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (3) statements -> statements . statement
    (5) statement -> . assignment
    (6) statement -> . conditional
    (7) statement -> . loop
    (8) statement -> . function
    (9) statement -> . display
    (10) statement -> . input
    (11) assignment -> . LET IDENTIFIER EQUAL expression
    (13) conditional -> . IF condition THEN statements else_statements_opt END
    (57) loop -> . FOR IDENTIFIER IN list DO statements
    (58) loop -> . WHILE condition DO statements
    (59) loop -> . DO statements WHILE condition
    (65) function -> . FUNCTION IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE return_statement_opt RBRACE
    (40) display -> . SHOW expression
    (41) display -> . SHOW STRING_LITERAL
    (42) display -> . SHOW IDENTIFIER
    (43) display -> . SHOW NUMBER
    (44) display -> . SHOW REAL
    (45) display -> . SHOW CHARACTER
    (46) display -> . SHOW list
    (47) display -> . SHOW function
    (48) display -> . SHOW conditional
    (49) display -> . SHOW loop
    (50) display -> . SHOW input
    (51) display -> . SHOW comment
    (52) display -> . SHOW program
    (53) display -> . SHOW statements
    (54) display -> . SHOW expression_list
    (55) display -> . SHOW assignment
    (56) display -> . SHOW display
    (39) input -> . LET IDENTIFIER EQUAL SHOW IDENTIFIER LPAREN STRING_LITERAL RPAREN

    $end            reduce using rule 1 (program -> statements .)
    LET             shift and go to state 22
    IF              shift and go to state 23
    FOR             shift and go to state 24
    WHILE           shift and go to state 26
    DO              shift and go to state 25
    FUNCTION        shift and go to state 27
    SHOW            shift and go to state 28

    statement                      shift and go to state 29
    assignment                     shift and go to state 12
    conditional                    shift and go to state 13
    loop                           shift and go to state 14
    function                       shift and go to state 15
    display                        shift and go to state 16
    input                          shift and go to state 17

state 3

    (2) program -> expression .
    (22) expression -> expression . PLUS term
    (23) expression -> expression . MINUS term
    (25) expression -> expression . POWER term

    $end            reduce using rule 2 (program -> expression .)
    PLUS            shift and go to state 30
    MINUS           shift and go to state 31
    POWER           shift and go to state 32


state 4

    (4) statements -> statement .

    LET             reduce using rule 4 (statements -> statement .)
    IF              reduce using rule 4 (statements -> statement .)
    FOR             reduce using rule 4 (statements -> statement .)
    WHILE           reduce using rule 4 (statements -> statement .)
    DO              reduce using rule 4 (statements -> statement .)
    FUNCTION        reduce using rule 4 (statements -> statement .)
    SHOW            reduce using rule 4 (statements -> statement .)
    $end            reduce using rule 4 (statements -> statement .)
    ELSE            reduce using rule 4 (statements -> statement .)
    END             reduce using rule 4 (statements -> statement .)
    RBRACE          reduce using rule 4 (statements -> statement .)


state 5

    (24) expression -> term .
    (32) term -> term . TIMES factor
    (33) term -> term . DIVIDE factor

    PLUS            reduce using rule 24 (expression -> term .)
    MINUS           reduce using rule 24 (expression -> term .)
    POWER           reduce using rule 24 (expression -> term .)
    $end            reduce using rule 24 (expression -> term .)
    RPAREN          reduce using rule 24 (expression -> term .)
    RBRACKET        reduce using rule 24 (expression -> term .)
    COMMA           reduce using rule 24 (expression -> term .)
    IS_LESS_THAN    reduce using rule 24 (expression -> term .)
    IS_EQUAL_TO     reduce using rule 24 (expression -> term .)
    IS_GREATER_THAN reduce using rule 24 (expression -> term .)
    IS_NOT_EQUAL_TO reduce using rule 24 (expression -> term .)
    GREATER_THAN_OR_EQUAL_TO reduce using rule 24 (expression -> term .)
    LESS_THAN_OR_EQUAL_TO reduce using rule 24 (expression -> term .)
    LET             reduce using rule 24 (expression -> term .)
    IF              reduce using rule 24 (expression -> term .)
    FOR             reduce using rule 24 (expression -> term .)
    WHILE           reduce using rule 24 (expression -> term .)
    DO              reduce using rule 24 (expression -> term .)
    FUNCTION        reduce using rule 24 (expression -> term .)
    SHOW            reduce using rule 24 (expression -> term .)
    ELSE            reduce using rule 24 (expression -> term .)
    END             reduce using rule 24 (expression -> term .)
    RBRACE          reduce using rule 24 (expression -> term .)
    THEN            reduce using rule 24 (expression -> term .)
    TIMES           shift and go to state 33
    DIVIDE          shift and go to state 34


state 6

    (26) expression -> NOT . expression
    (22) expression -> . expression PLUS term
    (23) expression -> . expression MINUS term
    (24) expression -> . term
    (25) expression -> . expression POWER term
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER MINUS term
    (29) expression -> . REAL MINUS term
    (30) expression -> . CHARACTER PLUS term
    (31) expression -> . list
    (32) term -> . term TIMES factor
    (33) term -> . term DIVIDE factor
    (34) term -> . IDENTIFIER
    (35) term -> . factor
    (60) list -> . LBRACKET expression_list RBRACKET
    (61) list -> . empty
    (36) factor -> . NUMBER
    (37) factor -> . LPAREN expression RPAREN
    (38) factor -> . REAL
    (71) empty -> .

    NOT             shift and go to state 6
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 8
    REAL            shift and go to state 9
    CHARACTER       shift and go to state 10
    IDENTIFIER      shift and go to state 19
    LBRACKET        shift and go to state 20
    PLUS            reduce using rule 71 (empty -> .)
    MINUS           reduce using rule 71 (empty -> .)
    POWER           reduce using rule 71 (empty -> .)
    $end            reduce using rule 71 (empty -> .)
    RPAREN          reduce using rule 71 (empty -> .)
    RBRACKET        reduce using rule 71 (empty -> .)
    COMMA           reduce using rule 71 (empty -> .)
    IS_LESS_THAN    reduce using rule 71 (empty -> .)
    IS_EQUAL_TO     reduce using rule 71 (empty -> .)
    IS_GREATER_THAN reduce using rule 71 (empty -> .)
    IS_NOT_EQUAL_TO reduce using rule 71 (empty -> .)
    GREATER_THAN_OR_EQUAL_TO reduce using rule 71 (empty -> .)
    LESS_THAN_OR_EQUAL_TO reduce using rule 71 (empty -> .)
    LET             reduce using rule 71 (empty -> .)
    IF              reduce using rule 71 (empty -> .)
    FOR             reduce using rule 71 (empty -> .)
    WHILE           reduce using rule 71 (empty -> .)
    DO              reduce using rule 71 (empty -> .)
    FUNCTION        reduce using rule 71 (empty -> .)
    SHOW            reduce using rule 71 (empty -> .)
    ELSE            reduce using rule 71 (empty -> .)
    END             reduce using rule 71 (empty -> .)
    RBRACE          reduce using rule 71 (empty -> .)
    THEN            reduce using rule 71 (empty -> .)

    expression                     shift and go to state 35
    term                           shift and go to state 5
    list                           shift and go to state 11
    factor                         shift and go to state 18
    empty                          shift and go to state 21

state 7

    (27) expression -> LPAREN . expression RPAREN
    (37) factor -> LPAREN . expression RPAREN
    (22) expression -> . expression PLUS term
    (23) expression -> . expression MINUS term
    (24) expression -> . term
    (25) expression -> . expression POWER term
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER MINUS term
    (29) expression -> . REAL MINUS term
    (30) expression -> . CHARACTER PLUS term
    (31) expression -> . list
    (32) term -> . term TIMES factor
    (33) term -> . term DIVIDE factor
    (34) term -> . IDENTIFIER
    (35) term -> . factor
    (60) list -> . LBRACKET expression_list RBRACKET
    (61) list -> . empty
    (36) factor -> . NUMBER
    (37) factor -> . LPAREN expression RPAREN
    (38) factor -> . REAL
    (71) empty -> .

    NOT             shift and go to state 6
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 8
    REAL            shift and go to state 9
    CHARACTER       shift and go to state 10
    IDENTIFIER      shift and go to state 19
    LBRACKET        shift and go to state 20
    RPAREN          reduce using rule 71 (empty -> .)
    PLUS            reduce using rule 71 (empty -> .)
    MINUS           reduce using rule 71 (empty -> .)
    POWER           reduce using rule 71 (empty -> .)

    expression                     shift and go to state 36
    term                           shift and go to state 5
    list                           shift and go to state 11
    factor                         shift and go to state 18
    empty                          shift and go to state 21

state 8

    (28) expression -> NUMBER . MINUS term
    (36) factor -> NUMBER .

  ! shift/reduce conflict for MINUS resolved as shift
    MINUS           shift and go to state 37
    TIMES           reduce using rule 36 (factor -> NUMBER .)
    DIVIDE          reduce using rule 36 (factor -> NUMBER .)
    PLUS            reduce using rule 36 (factor -> NUMBER .)
    POWER           reduce using rule 36 (factor -> NUMBER .)
    $end            reduce using rule 36 (factor -> NUMBER .)
    RPAREN          reduce using rule 36 (factor -> NUMBER .)
    RBRACKET        reduce using rule 36 (factor -> NUMBER .)
    COMMA           reduce using rule 36 (factor -> NUMBER .)
    IS_LESS_THAN    reduce using rule 36 (factor -> NUMBER .)
    IS_EQUAL_TO     reduce using rule 36 (factor -> NUMBER .)
    IS_GREATER_THAN reduce using rule 36 (factor -> NUMBER .)
    IS_NOT_EQUAL_TO reduce using rule 36 (factor -> NUMBER .)
    GREATER_THAN_OR_EQUAL_TO reduce using rule 36 (factor -> NUMBER .)
    LESS_THAN_OR_EQUAL_TO reduce using rule 36 (factor -> NUMBER .)
    LET             reduce using rule 36 (factor -> NUMBER .)
    IF              reduce using rule 36 (factor -> NUMBER .)
    FOR             reduce using rule 36 (factor -> NUMBER .)
    WHILE           reduce using rule 36 (factor -> NUMBER .)
    DO              reduce using rule 36 (factor -> NUMBER .)
    FUNCTION        reduce using rule 36 (factor -> NUMBER .)
    SHOW            reduce using rule 36 (factor -> NUMBER .)
    ELSE            reduce using rule 36 (factor -> NUMBER .)
    END             reduce using rule 36 (factor -> NUMBER .)
    RBRACE          reduce using rule 36 (factor -> NUMBER .)
    THEN            reduce using rule 36 (factor -> NUMBER .)

  ! MINUS           [ reduce using rule 36 (factor -> NUMBER .) ]


state 9

    (29) expression -> REAL . MINUS term
    (38) factor -> REAL .

  ! shift/reduce conflict for MINUS resolved as shift
    MINUS           shift and go to state 38
    TIMES           reduce using rule 38 (factor -> REAL .)
    DIVIDE          reduce using rule 38 (factor -> REAL .)
    PLUS            reduce using rule 38 (factor -> REAL .)
    POWER           reduce using rule 38 (factor -> REAL .)
    $end            reduce using rule 38 (factor -> REAL .)
    RPAREN          reduce using rule 38 (factor -> REAL .)
    RBRACKET        reduce using rule 38 (factor -> REAL .)
    COMMA           reduce using rule 38 (factor -> REAL .)
    IS_LESS_THAN    reduce using rule 38 (factor -> REAL .)
    IS_EQUAL_TO     reduce using rule 38 (factor -> REAL .)
    IS_GREATER_THAN reduce using rule 38 (factor -> REAL .)
    IS_NOT_EQUAL_TO reduce using rule 38 (factor -> REAL .)
    GREATER_THAN_OR_EQUAL_TO reduce using rule 38 (factor -> REAL .)
    LESS_THAN_OR_EQUAL_TO reduce using rule 38 (factor -> REAL .)
    LET             reduce using rule 38 (factor -> REAL .)
    IF              reduce using rule 38 (factor -> REAL .)
    FOR             reduce using rule 38 (factor -> REAL .)
    WHILE           reduce using rule 38 (factor -> REAL .)
    DO              reduce using rule 38 (factor -> REAL .)
    FUNCTION        reduce using rule 38 (factor -> REAL .)
    SHOW            reduce using rule 38 (factor -> REAL .)
    ELSE            reduce using rule 38 (factor -> REAL .)
    END             reduce using rule 38 (factor -> REAL .)
    RBRACE          reduce using rule 38 (factor -> REAL .)
    THEN            reduce using rule 38 (factor -> REAL .)

  ! MINUS           [ reduce using rule 38 (factor -> REAL .) ]


state 10

    (30) expression -> CHARACTER . PLUS term

    PLUS            shift and go to state 39


state 11

    (31) expression -> list .

    PLUS            reduce using rule 31 (expression -> list .)
    MINUS           reduce using rule 31 (expression -> list .)
    POWER           reduce using rule 31 (expression -> list .)
    $end            reduce using rule 31 (expression -> list .)
    RPAREN          reduce using rule 31 (expression -> list .)
    RBRACKET        reduce using rule 31 (expression -> list .)
    COMMA           reduce using rule 31 (expression -> list .)
    IS_LESS_THAN    reduce using rule 31 (expression -> list .)
    IS_EQUAL_TO     reduce using rule 31 (expression -> list .)
    IS_GREATER_THAN reduce using rule 31 (expression -> list .)
    IS_NOT_EQUAL_TO reduce using rule 31 (expression -> list .)
    GREATER_THAN_OR_EQUAL_TO reduce using rule 31 (expression -> list .)
    LESS_THAN_OR_EQUAL_TO reduce using rule 31 (expression -> list .)
    LET             reduce using rule 31 (expression -> list .)
    IF              reduce using rule 31 (expression -> list .)
    FOR             reduce using rule 31 (expression -> list .)
    WHILE           reduce using rule 31 (expression -> list .)
    DO              reduce using rule 31 (expression -> list .)
    FUNCTION        reduce using rule 31 (expression -> list .)
    SHOW            reduce using rule 31 (expression -> list .)
    ELSE            reduce using rule 31 (expression -> list .)
    END             reduce using rule 31 (expression -> list .)
    RBRACE          reduce using rule 31 (expression -> list .)
    THEN            reduce using rule 31 (expression -> list .)


state 12

    (5) statement -> assignment .
